--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     {% if tasks|length < 1 %}
     <h4>No tasks to show</h4>
     {% else %}
-    <table>
+    <table class="styled-table">
         <tr>
             <th>Task</th>
             <th>Added</th>
@@ -29,7 +29,7 @@
     <div>
         <form action="/" method="post">
     
-            <input type="text" name="content" id = 'content'>
+            <input type="text" name="content" id = 'content' class="form__field">
             <input type="submit" value="Add" class="button">
         
         </form>
